# OCF_oscvpass2

./: Dockerfile  README.md  init.sql  main.py  pyproject.toml  run.sh  sec.sh  sql.py  start.sh
templates/: base.html  login_page.html  login_success.html  test.html
