[tool.poetry]
name = "aaa"
version = "0.1.0"
description = ""
authors = ["Kevin Huang <kevins50105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
arrow = "^1.3.0"
mysql-connector-python = "^9.0.0"
flask = "^3.0.3"
authlib = "^1.3.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

